# routes/task.routes.js
@@ -2,6 +2,8 @@ const controller = require("../controllers/task.controller");
 const router = require("express").Router();
 
 router.get("", controller.getAll);
+router.get("/assignedToMe/:userId", controller.getAllAssignedToMe);
+router.get("/assignedByMe/:userId", controller.getAllAssignedByMe);
 router.get("/:taskId", controller.findOne);
 router.post("", controller.create);
 router.put("/:taskId",  controller.update);
